--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 HUGGING_FACE_API_URL = https://api-inference.huggingface.co/models/julien-c/hotdog-not-hotdog
-HUGGING_FACE_API_KEY = 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
+HUGGING_FACE_API_KEY = YOUR_API_KEY_HERE
